Changes - Overflow issue in chat frontend caused by css (Settled) - Keeping up chat front-end and back-end with master

--- a/public/css/student/chat.css
+++ b/public/css/student/chat.css
@@ -13,7 +13,7 @@
 
 .chat--main {
   max-height: 100vh;
-  min-width: 86vw;
+  /* min-width: 86vw;  THIS HAS BEEN CAUSING AN OVERFLOW ISSUE IN THE CHAT FRONTEND DESIGN */ 
 }
 
 /* -- Chatarea -- */
